# StealthApp

./: .gitignore  DOCUMENTATION.md  README.md  config.example.json  pyproject.toml  setup.bat  setup.sh  stats.json
src/stealthapp/: __init__.py  __main__.py  app.py
src/stealthapp/ai/: _transcription_process.py  base.py  factory.py  ocr_worker.py  ollama_client.py  transcript.py
src/stealthapp/audio/: recorder.py
src/stealthapp/core/: capture_exclusion.py  config.py  logger.py  overlay_window.py  stat_watcher.py
src/stealthapp/widgets/: audio_widget.py  chat_widget.py  header_bar.py  ollama_widget.py  stat_panel.py  vision_widget.py
