[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stealthapp"
version = "0.1.6"
description = "Transparent overlay — invisible to screen capture"
requires-python = ">=3.11"

dependencies = [
    "PyQt6>=6.6.0",
    "watchdog>=4.0.0",
    "sounddevice>=0.5.5",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "faster-whisper>=1.2.0",
    "httpx>=0.24.0",
    "av>=12.0.0",
    "typing-extensions>=4.0.0",
    "pytesseract>=0.3.10",
    "pillow>=10.2.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["ruff", "pyinstaller"]

[project.urls]
Homepage = "https://github.com/sarathithikkatt/StealthApp"
Documentation = "https://github.com/sarathithikkatt/StealthApp#readme"

[project.scripts]
stealthapp = "stealthapp.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
